--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /models/VGG_ILSVRC_19_layers_deploy.prototxt
 /models/VGG_ILSVRC_16_layers.caffemodel
 /models/VGG_ILSVRC_16_layers_deploy.prototxt
+*.idb
