--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "third-party/gflags"]
 	path = third-party/gflags
 	url = https://github.com/gflags/gflags
+	ignore = dirty	
 [submodule "third-party/glog"]
 	path = third-party/glog
 	url = https://github.com/google/glog
+	ignore = dirty	
 [submodule "third-party/protobuf"]
 	path = third-party/protobuf
 	url = https://github.com/google/protobuf
+	ignore = dirty	
 [submodule "third-party/opencv"]
 	path = third-party/opencv
 	url = https://github.com/opencv/opencv
+	ignore = dirty
