--- a/auxiliary/mnist-dcgan/package.json
+++ b/auxiliary/mnist-dcgan/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mnist-dcgan",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "d3": "^4.9.1",
     "rxjs": "^5.1.0",
     "socket.io-client": "^2.0.2",
     "zone.js": "^0.8.4"
